<resources>
    <string name="app_name">docredtest</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="entrarText">Entrar</string>
    <string name="registro">Registrarse</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create">Create</string>
    <string name="selfie">Selfie</string>
    <string name="foto_cc">Foto CC</string>
</resources>
