<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fui_bgAnonymous"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/enterButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="219dp"
        android:background="@drawable/button_soft_corners"
        android:onClick="enterToLogin"
        android:radius="20dp"
        android:text="@string/entrarText"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/endavaTitle"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="@font/arial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endavaTitle2"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/orange"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="@font/arial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endavaTitle" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/button_soft_corners"
        android:textColor="@android:color/white"
        android:onClick="enterToRegister"
        android:radius="20dp"
        android:text="@string/registro"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>